# reshop

./: .clang-tidy  .gitignore  .gitlab-ci-gams.yml  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  mkdocs.yml
.ci-gams/: .gitlab-ci-analyze.yml  .gitlab-ci-build.yml  .gitlab-ci-leakcheck.yml  .gitlab-ci-test.yml  .gitlab-ci-validate.yml
.github/workflows/: cmake-multi-platform.yml  win-llvm.yml
benchmark/: CMakeLists.txt
benchmark/ovf/: linear_quantile_regression.c
benchmark/utils/: arg_cauldron.h  bench_utils.c  bench_utils.h
cmake/: CheckGit.cmake  FindDWARF.cmake  FindGMP.cmake  FindLLVMUnwind.cmake  FindSanitizers.cmake  FindUnwind.cmake  compiler_flags.cmake  download_path_libs.cmake  gams_gen_gamscntr.gms  gams_sysdir.gms  glibc_restriction_check.cmake  linker_options.cmake  mingw_info.cmake  reshop_config.h.in  sanitizers-profile.cmake  valgrind.supp  version.in
common/: reshop_gams_common.h  reshop_gams_optfile.c  rhp_array_utils.h  rhp_basic_memory.h  rhp_ipc_protocol.c  rhp_ipc_protocol.h  rhp_socket_error.h  rhp_socket_server.h
docs/: CMakeLists.txt  Doxyfile  api.md  index.md  license.md
docs/api/: C.md  python-C-like.md  python-object.md
docs/javascripts/: katex.js
docs/usage/: index.md
gams_link/: CMakeLists.txt  gmsrhp_ux.c  optreshop.def  optreshop.gms  reshop_main.c  reshop_misc.c  reshop_opt.c  reshop_priv.h  rhp.h
gams_link/apiwrap/reshop/: rhpcclib.c  rhpcclib.def  rhpcclib64.def
gams_link/cfg/: gamsconfig.yaml.in  gamsconfig_valgrind.yaml.in  valgrind.run
gams_link/cfg/linux/: gamsconfig.yaml
gams_link/cfg/macos/: gamsconfig.yaml
gams_link/makeself/: installer-bundle.sh.in  installer.sh.in
gui/: CMakeLists.txt  JetBrainsMonoNL-Regular.h  reshop_imgui.cpp
gui/utils/: rhp_gui_data.c  rhp_gui_data.h  rhp_gui_ipc_poll.c  rhp_socket_server.h  rhpgui_array_utils.h  rhpgui_error.h  rhpgui_ipc.c  rhpgui_ipc.h  rhpgui_ipc_poll.h  rhpgui_macros.h  unix_domain_nonblocking_poll.c
src/: rhp_fwd.h
src/ampl/: nl_utils.c  nl_utils.h
src/api/: api_LA.c  api_empdag.c  api_equ.c  api_fns.c  api_gams.c  api_gamsdriver.c  api_global_fns.c  api_mathprgm.c  api_mdl.c  api_mdl_wrapper.c  api_mp_fn.c  api_mpe_fn.c  api_nltree.c  api_options.c  api_ovf.c  api_rmdl.c  api_var.c  reshop-gams.h  reshop.h
src/conf/: git_version.c.in  git_version.h
src/dag/: empdag.c  empdag.h  empdag_alg.c  empdag_alg.h  empdag_common.h  empdag_data.c  empdag_data.h  empdag_dot.c  empdag_minimax.c  empdag_mp.h  empdag_mpe.h  empdag_node_generic.inc  empdag_priv.h  empdag_uid.h  empdag_utils.c  mathprgm.c  mathprgm.h  mathprgm_data.h  mathprgm_helpers.c  mathprgm_helpers.h  mathprgm_priv.h  mp_equil.c  mp_equil.h
src/gams/: ctr_gams.c  ctr_gams.h  ctr_ops_gams.c  ctrdat_gams.h  embcode_empinfo.c  embcode_empinfo.h  empinterp.c  empinterp.h  empinterp_checks.c  empinterp_checks.h  empinterp_data.h  empinterp_design.md  empinterp_edgebuilder.c  empinterp_edgebuilder.h  empinterp_edgeresolver.c  empparser.c  (+51 more)
swig/: CMakeLists.txt  Makefile  TODO  defines_python.i  fun_custom.i  linalg_common.i  matrix.i  numpy.i  pybuild.sh  pyobj_methods.i  pyobjs_custom.i  pyproject.toml  python_structs.h  rename.sed  rename.sh  rename_named.i  reshop.i  reshop_objects.i  setup.py.in  start.i  target_datatypes.i  tox.ini
swig/tests/: basic_test.py  test_basic.py  test_unit.py
test/: CMakeLists.txt  test_basic.c  test_basic.h  test_basic_gams.c  test_basic_reshop.c  test_callsolver.c  test_common.c  test_common.h  test_crm.c  test_crm.h  test_crm_gams.c  test_crm_reshop.c  test_ovf.c  test_ovf.h  test_ovf_fitting_common.c  test_ovf_fitting_common.h  test_ovf_fitting_gams.c  test_ovf_fitting_reshop.c  test_ovf_gams.c  test_ovf_reshop.c  test_solve.c
test/empinfos/: mp_splitlines
test/gams/: .gdb_history  test-basic.sh  test.sh  utils.sh
test/gams/basics/: dump_scalar_model.gms  dynamic_4_stages_lin.gms  empdag_conditionals.gms  nltree.gms  no-objequ.gms  objvar-NL.gms  single_opt.gms  subgms.in
test/gams/bilevel/: bard-851.gms
test/gams/buggy_jams/: dualequ_and_vi.gms  dualequ_mopec.gms
test/gams/cfg/: gamsconfig_test_asan.yaml.in  gamsconfig_test_valgrind.yaml.in  script.cmd.in  script.sh.in  valgrind.run.in
test/gams/dualvar/: pies.gms
test/gams/embcode_reshop/: nash_dynamic_emb.gms  nash_emb.gms
test/gams/embedded-code/: mopec_mathiesen_pyempdag.gms  transport.gms
test/gams/empinterp/: empdag_forbidden_label.gms  simpequil_space_comments.gms
test/gams/equilibrium/: mopec_mathiesen.gms
test/gams/informs-tutorial/: clusterEMP.gms  invMan.gms  inventory_example.gms  superquantile.gms
test/gams/invalid/: assignment_errors.gms  embcode_invalid.gms  missing_empinfo.gms
test/gams/ovf/: .gdb_history  10_portfolio_E_with_keywd.gms  Demandresponse.inc  RiskNoTrade.gms  RiskNoTrade_ecvar.gms  RiskTrade_ecvar.gms  RiskTrade_implicit.gms  crm-multistage.gms  crm-multistage_labels.gms  crm-multistage_max.gms  cvarup_OVF.gms  default_loss.inc  empinfo.gdx  hogg2010test.gdx  outputtrade05.inc  simpenlp_v2.gms  simple.gms  test.sh  test_loss.gms  test_loss1.gms  test_loss_nl.gms
test/gams/ovf/ref/notrade15/: equil.out  optInd.out
test/gams/ovf/ref/trade10/: equil.out  optInd.out
test/gams/parser/: vi-end-declaration-conditional.gms
test/gams/stochastic-programming/: basic4.gms  clearlak-ecvarup_test.gms  clearlaktree.gdx  clearlaktree.gms  clearlaktree_ecvarup.gms  clearlaktree_ecvarup_nash.gms  clearlaktree_ecvarup_nl.gms  sp3.gms  test.sh
test/internal/: test_container_gms.c  test_diff.c  test_diff_answer.h  test_instr.h  test_nlopcode.c  test_ovf.c  test_rmdlexport.c  test_tree.c
test/utils/: colors.h  test_gams_utils.c  test_gams_utils.h
utils/: GMSPython312-osx-amd64.cmake  GMSPython38-osx-amd64.cmake  GMSPython38-osx-arm64.cmake  GMSPython38-win64.cmake  analysis-glibc-2.12.sh  cppcheck-ci.sh  doxy2numpydoc.py  leak.supp  reshop_generators_config.csv  rhp_jll.jl  sanitizer-test.sh  scan-build-ci-gui.sh  scan-build-ci-reshop.sh  scan-build-ci.sh  swig_generate_methods_from_api.py  template.tex
utils/gams/: CMakeLists.txt  optreshop.cpp
(+347 files in other folders)
